# app/Http/Resources/superHeroResource.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class superHeroResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return
+            [
+
+                'id' => $this->id,
+                'first_name' => $this->first_name,
+                'last_name' => $this->last_name,
+                'nick_name' => $this->nick_name,
+                'publisher' => [
+                    'id' => $this->publisher_id,
+                    'name' => $this->publisher->name_publisher
+                ]
+
+            ];
+    }
+}
